# mcp-servers

./: .gitignore  CONDA_BUILD.md  CONDA_SETUP_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  MIGRATION.md  README.md  TEST_RESULTS.md  TEST_RESULTS_FINAL.md  package-lock.json  package.json  pixi.toml  pyproject.toml  test-ensembl.js  test-string.js
.github/workflows/: conda-build.yml
conda-recipes/ensembl-mcp/: meta.yaml
conda-recipes/gh-mcp/: meta.yaml
conda-recipes/rest-utils/: meta.yaml
conda-recipes/string-mcp/: meta.yaml
scripts/: bump-version.py  push-release-tag.py  register-claude.py
servers/: __init__.py
servers/ensembl/: ENDPOINTS.md  claude_desktop_config.json  package-lock.json  package.json
servers/ensembl/src/: index.ts  tools.ts
servers/gh/: QUICKSTART.md  README.md  TOOLS.md  __init__.py  config-example.json  package.json  pyproject.toml  server.py  test_server.py
servers/string/: ENDPOINTS.md  package.json
servers/string/src/: index.ts  tools.ts
