[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-mcp"
version = "0.1.0"
description = "MCP server that wraps GitHub CLI (gh) functionality"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
gh-mcp = "server:main"
